// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormFieldset No Styles 1`] = `
<fieldset
  className="xxx-fieldset"
>
  <legend
    className="xxx-fieldset__legend"
  >
    Shipping Address
  </legend>
  <div
    className="xxx-form-item"
  >
    <label
      className="xxx-form-label"
      htmlFor="ex01"
    >
      Name:
    </label>
    <input
      className="xxx-input"
      id="ex01"
      type="text"
    />
  </div>
  <div
    className="xxx-form-item"
  >
    <label
      className="xxx-form-label"
      htmlFor="ex02"
    >
      Street:
    </label>
    <input
      className="xxx-input"
      id="ex02"
      type="text"
    />
  </div>
  <div
    className="xxx-form-item"
  >
    <label
      className="xxx-form-label"
      htmlFor="ex03"
    >
      City:
    </label>
    <input
      className="xxx-input"
      id="ex03"
      type="text"
    />
  </div>
  <div
    className="xxx-form-item"
  >
    <label
      className="xxx-form-label"
      htmlFor="ex04"
    >
      ZIP code:
    </label>
    <input
      className="xxx-input"
      id="ex04"
      type="text"
    />
  </div>
</fieldset>
`;

exports[`Storyshots Component API/Forms/FormFieldset Primary 1`] = `
Array [
  <fieldset
    className="fd-fieldset"
  >
    <legend
      className="fd-fieldset__legend"
    >
      Shipping Address
    </legend>
    <div
      className="fd-form-item"
    >
      <label
        className="fd-form-label"
        htmlFor="ex01"
      >
        Name:
      </label>
      <input
        className="fd-input"
        id="ex01"
        type="text"
      />
    </div>
    <div
      className="fd-form-item"
    >
      <label
        className="fd-form-label"
        htmlFor="ex02"
      >
        Street:
      </label>
      <input
        className="fd-input"
        id="ex02"
        type="text"
      />
    </div>
    <div
      className="fd-form-item"
    >
      <label
        className="fd-form-label"
        htmlFor="ex03"
      >
        City:
      </label>
      <input
        className="fd-input"
        id="ex03"
        type="text"
      />
    </div>
    <div
      className="fd-form-item"
    >
      <label
        className="fd-form-label"
        htmlFor="ex04"
      >
        ZIP code:
      </label>
      <input
        className="fd-input"
        id="ex04"
        type="text"
      />
    </div>
  </fieldset>,
  <fieldset
    className="fd-fieldset"
  >
    <legend
      className="fd-fieldset__legend"
    >
      Billing Address
    </legend>
    <div
      className="fd-form-item"
    >
      <label
        className="fd-form-label"
        htmlFor="ex05"
      >
        Name:
      </label>
      <input
        className="fd-input"
        id="ex05"
        type="text"
      />
    </div>
    <div
      className="fd-form-item"
    >
      <label
        className="fd-form-label"
        htmlFor="ex06"
      >
        Street:
      </label>
      <input
        className="fd-input"
        id="ex06"
        type="text"
      />
    </div>
    <div
      className="fd-form-item"
    >
      <label
        className="fd-form-label"
        htmlFor="ex07"
      >
        City:
      </label>
      <input
        className="fd-input"
        id="ex07"
        type="text"
      />
    </div>
    <div
      className="fd-form-item"
    >
      <label
        className="fd-form-label"
        htmlFor="ex08"
      >
        ZIP code:
      </label>
      <input
        className="fd-input"
        id="ex08"
        type="text"
      />
    </div>
  </fieldset>,
]
`;

exports[`Storyshots Component API/Forms/FormFieldset Radio Button Groups 1`] = `
Array [
  <fieldset
    className="fd-fieldset"
  >
    <legend
      className="fd-fieldset__legend"
    >
      Radio buttons
    </legend>
    <div
      className="fd-form-group"
    >
      <div
        className="fd-form-item"
        onChange={[Function]}
      >
        <input
          className="fd-radio"
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 1
        </label>
      </div>
      <div
        className="fd-form-item"
        onChange={[Function]}
      >
        <input
          className="fd-radio"
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 2
        </label>
      </div>
      <div
        className="fd-form-item"
        onChange={[Function]}
      >
        <input
          className="fd-radio"
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 3
        </label>
      </div>
    </div>
  </fieldset>,
  <fieldset
    className="fd-fieldset"
  >
    <legend
      className="fd-fieldset__legend"
    >
      Radio buttons disabled
    </legend>
    <div
      className="fd-form-group"
    >
      <div
        className="fd-form-item"
        onChange={[Function]}
      >
        <input
          className="fd-radio"
          disabled={true}
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label is-disabled fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 1
        </label>
      </div>
      <div
        className="fd-form-item"
        onChange={[Function]}
      >
        <input
          className="fd-radio"
          disabled={true}
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label is-disabled fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 2
        </label>
      </div>
      <div
        className="fd-form-item"
        onChange={[Function]}
      >
        <input
          className="fd-radio"
          disabled={true}
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label is-disabled fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 3
        </label>
      </div>
    </div>
  </fieldset>,
  <fieldset
    className="fd-fieldset"
  >
    <legend
      className="fd-fieldset__legend"
    >
      Inline Radio buttons
    </legend>
    <div
      className="fd-form-group fd-form-group--inline"
    >
      <div
        className="fd-form-item fd-form-item--inline"
        onChange={[Function]}
      >
        <input
          className="fd-radio"
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 1
        </label>
      </div>
      <div
        className="fd-form-item fd-form-item--inline"
        onChange={[Function]}
      >
        <input
          className="fd-radio"
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 2
        </label>
      </div>
      <div
        className="fd-form-item fd-form-item--inline"
        onChange={[Function]}
      >
        <input
          className="fd-radio"
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 3
        </label>
      </div>
    </div>
  </fieldset>,
  <fieldset
    className="fd-fieldset"
  >
    <legend
      className="fd-fieldset__legend"
    >
      Compact Radio buttons
    </legend>
    <div
      className="fd-form-group"
    >
      <div
        className="fd-form-item"
        onChange={[Function]}
      >
        <input
          className="fd-radio fd-radio--compact"
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 1
        </label>
      </div>
      <div
        className="fd-form-item"
        onChange={[Function]}
      >
        <input
          className="fd-radio fd-radio--compact"
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 2
        </label>
      </div>
      <div
        className="fd-form-item"
        onChange={[Function]}
      >
        <input
          className="fd-radio fd-radio--compact"
          id="fd-mocked-short-id"
          name="fd-mocked-short-id"
          type="radio"
        />
        <label
          className="fd-form-label fd-radio__label"
          htmlFor="fd-mocked-short-id"
        >
          Option 3
        </label>
      </div>
    </div>
  </fieldset>,
]
`;
